[package]
name = "spl-staking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.9.2"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
arrayref = "0.3.7"

[dev-dependencies]
solana-program-test = "1.17.17"
solana-sdk = "1.8.2"

[lib]
crate-type = ["cdylib", "lib"]
